<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              android:layout_width="match_parent"
              android:layout_height="match_parent"
              android:orientation="vertical"
              android:padding="16dp">

    <TextView android:layout_width="wrap_content"
              android:layout_height="wrap_content"
              android:text="@string/network_type_required_txt"
              android:textAppearance="@style/TextAppearance.AppCompat.Subhead"
              android:layout_margin="4dp"/>
    <RadioGroup android:id="@+id/networkOptions"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_margin="4dp">
        <RadioButton android:id="@+id/noNetwork"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/txt_none"
                    android:checked="true"/>
        <RadioButton android:id="@+id/anyNetwork"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:text="@string/txt_any"/>
        <RadioButton android:id="@+id/wifiNetwork"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:text="@string/txt_wifi"/>
    </RadioGroup>

    <TextView android:layout_width="wrap_content"
              android:layout_height="wrap_content"
              android:text="@string/txt_requires"
              android:textAppearance="@style/TextAppearance.AppCompat.Subhead"
              android:layout_margin="4dp"/>
    <LinearLayout android:layout_width="match_parent"
                  android:layout_height="wrap_content"
                  android:orientation="horizontal"
                  android:layout_margin="4dp">
        <Switch android:id="@+id/idleSwitch"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/switch_device_idle"/>
        <Switch android:id="@+id/chargingSwitch"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/switch_device_charging"/>

    </LinearLayout>

    <LinearLayout android:layout_width="wrap_content"
                  android:layout_height="wrap_content"
                  android:orientation="horizontal"
                  android:layout_margin="4dp">
        <TextView android:id="@+id/seekBarLabel"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="Override Deadline: "
                android:textAppearance="@style/TextAppearance.AppCompat.Subhead"/>

        <TextView android:id="@+id/seekBarProgress"
                  android:layout_width="wrap_content"
                  android:layout_height="wrap_content"
                  android:text="Not Set"
                  android:textAppearance="@style/TextAppearance.AppCompat.Subhead"/>
    </LinearLayout>
    
    <SeekBar android:id="@+id/seekBar"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:layout_margin="4dp"/>

    <Button android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/btn_schedule_job"
            android:onClick="scheduleJob"
            android:layout_gravity="center_horizontal"
            android:layout_margin="4dp"/>

    <Button android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/btn_cancel_jobs"
            android:onClick="cancelJobs"
            android:layout_gravity="center_horizontal"
            android:layout_margin="4dp"/>

</LinearLayout>